# llm_from_scratch

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: start_up.cppm
src/attention_mechanisms/simplified_self_attention/with_lib_torch/: simplified_self_attention.cppm  simplified_self_attention_tests.cpp
src/bpe/Tokenizers/: tokenizer.cppm  tokenizer_tests.cpp
src/bpe/bpe_from_scratch/: bpe_from_scratch.cppm  bpe_from_scratch_tests.cpp
src/bpe/gpt_bpe/: byte_pair_encoding.cpp  gpt_bpe.cppm  gpt_bpe_test.cpp
src/data_structure/: BiDirectionalMap.cppm  bi_directional_map_tests.cpp  lru_cache.cppm
src/data_structure/BiDirectionalMap/: BiDirectionalMap.cppm  bi_directional_map.cppm
src/data_structure/LRUCache/: lru_cache.cppm  lru_cache_tests.cpp
src/utils/: bpe_helpers.cppm
